--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 dy {
   font-family: Arial, sans-serif;
   background-color: #f9f9f9;
@@ -47,11 +46,18 @@ header button:hover {
   background-color: #0d47a1;
 }
 
+.navbar {
+  overflow: hidden;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 99%; /* Full width */
+}
+
 /* Style the hero section */
 #hero {
-  background-image: url('path/to/hero-image.jpg');
+  background-image: url('../pupppr.jpg');
   background-size: cover;
-  height: 500px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -79,6 +85,75 @@ header button:hover {
   background-color: #0d47a1;
 }
 
+/* Style the About section*/
+#about {
+  background-color: #f8f8f8;
+  padding: 60px 0;
+}
+
+#about h2 {
+  font-size: 36px;
+  font-weight: 600;
+  color: #333;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+#about p {
+  font-size: 18px;
+  line-height: 1.6;
+  color: #666;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+#about ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+
+#about ul li {
+  margin-right: 40px;
+}
+
+#about ul li:last-child {
+  margin-right: 0;
+}
+
+#about ul li a {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background-color: #333;
+  border-radius: 50%;
+  color: rgb(105, 76, 235);
+  text-align: center;
+  line-height: 40px;
+  transition: all 0.3s ease;
+}
+
+#about ul li a:hover {
+  background-color: #666;
+}
+
+#about a.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 18px;
+  font-weight: 600;
+  color: #fff;
+  background-color: #333;
+  border-radius: 5px;
+  text-align: center;
+  transition: all 0.3s ease;
+}
+
+#about a.btn:hover {
+  background-color: #666;
+}
+
 /* Style the features section */
 #features {
   display: flex;
@@ -93,14 +168,12 @@ header button:hover {
 }
 
 .feature img {
-  height: 100px;
+  height: 100%;
+  width: 100%;
 }
 
 .feature h2 {
   font-size: 24px;
   margin-bottom: 10px;
 }
-
-.feature p {
-  font-size
 
